--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
     </configuration>
 </plugin>
         </plugins>-->
+         <finalName>docker-image</finalName>
     </build>
     
 </project>
